--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Yu Song"
   avatar           : "profile.png"
   bio              : "PostDoc @ Caltech"
-  location         : "Location"
+  location         : "https://www.eas.caltech.edu"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com.hk/citations?user=lDml1SkAAAAJ&hl=zh-CN"
