--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Yu Song"
-  avatar           : "profile.png"
+  avatar           : "1111.png"
   bio              : "PostDoc @ Caltech"
   location         : "Pasadena, CA"
   employer         :
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://orcid.org/0000-0002-4185-2256"
+  linkedin         : "https://www.linkedin.com/in/yu-song-323111aa/"
   orcid            : "https://orcid.org/0000-0002-4185-2256"
   pinterest        :
   soundcloud       :
