--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,30 @@
 # main links links
 main:
+
+  - title: "People"
+    url: /publications/
+    
+  - title: "Research"
+    url: /publications/
+    
+    
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
+  - title: "News"
     url: /talks/    
 
-  - title: "Teaching"
+  - title: "Awards"
     url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
+#  - title: "Portfolio"
+ #   url: /portfolio/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+#  - title: "Blog Posts"
+#    url: /year-archive/
     
-  - title: "CV"
+  - title: "Gallery"
     url: /cv/
     
-  - title: "Guide"
-    url: /markdown/
+# - title: "Contact"
+#    url: /markdown/
